SW-8569 Fixed tab link word wrapping

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/panel.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/panel.less
@@ -390,6 +390,7 @@ See the documentation of the child elements for additional information.
         border-width: 1px 1px 0 1px;
         border-style: solid;
         border-color: @borderColor;
+        white-space: nowrap;
 
         &.is--active {
             .unitize(1, 16, top);
